--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^3.1.3"
   },
   "dependencies": {
+    "dynamo-types": "^2.7.0-beta.6",
     "http-status-codes": "^1.3.0",
     "reflect-metadata": "^0.1.12",
     "source-map-support": "^0.5.9"
