--- a/serverless.yml
+++ b/serverless.yml
@@ -14,6 +14,11 @@ provider:
   logRetentionInDays: 1
   environment:
     STAGE: ${self:custom.stage}
+    LIGHT_LEVEL_TABLE: ${self:custom.tables.lightTableName}
+    PRESSURE_TABLE: ${self:custom.tables.pressureTableName}
+    TEMPERATURE_TABLE: ${self:custom.tables.temperatureTableName}
+    HUMIDITY_TABLE: ${self:custom.tables.humidityTableName}
+    RAIN_TABLE: ${self:custom.tables.rainTableName}
 
 custom:
   stage: ${opt:stage, self:provider.stage}
