--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "rootDir": "./",
     "sourceMap": true,
     "noUnusedLocals": true,
-    "strict": false,
+    "strict": true,
     "noImplicitReturns": true,
     "preserveConstEnums": true,
     "suppressImplicitAnyIndexErrors": true,
