--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "serverless": "^1.32.0",
     "serverless-offline": "^3.28.1",
     "serverless-plugin-typescript": "^1.1.5",
+    "tslint": "^5.11.0",
     "typescript": "^3.1.3"
   },
   "dependencies": {
