--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,12 +3,20 @@
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": [{
-    "type": "node",
-    "request": "launch",
-    "name": "Launch Program",
-    "program": "${workspaceFolder}/node_modules/.bin/serverless",
-    "args": ["offline", "start"],
-    "cwd": "${workspaceFolder}"
-  }]
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Program",
+      "program": "${workspaceFolder}/node_modules/.bin/serverless",
+      "args": [
+        "offline",
+        "start"
+      ],
+      "cwd": "${workspaceFolder}",
+      "env": {
+        "DYNAMO_TYPES_ENDPOINT": "http://127.0.0.1:8000"
+      }
+    }
+  ]
 }
