--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^8.10.28",
     "aws-sdk": "^2.341.0",
     "serverless": "^1.32.0",
+    "serverless-dynamodb-local": "^0.2.35",
     "serverless-offline": "^3.28.1",
     "serverless-plugin-typescript": "^1.1.5",
     "tslint": "^5.11.0",
